@@ -39,6 +39,7 @@ Moved Panels stylizer to CTools. You must update CTools at the same time as Pane
 #609626: Static caching loading mini panels.
 #848712 by josh_k: Use panel nodes with IPE.
 #860306 by jcmarco: "Substitutions" fieldset would not open due to missing js.
+#856964: "Custom style" selection was not working.
 
 Panels 6.x-3.5 (2010-May-28)
 ==============
